--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@simplewebauthn/browser": "^10.0.0",
     "@stellar/design-system": "^2.0.0-beta.16",
     "@stellar/stellar-sdk": "^12.3.0",
     "@tanstack/react-query": "^5.56.2",
