--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stellar/design-system": "^2.0.0-beta.16",
     "@stellar/stellar-sdk": "^12.3.0",
     "@tanstack/react-query": "^5.56.2",
+    "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
