Prepare SEP10c service for different types of servers.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "toml": "^3.0.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
