Change the project name and version.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sdf-fe-template-vite",
+  "name": "sep-smart-wallet",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
