Add initial functionality for SEP-10c and Passkeys (#1)
### What

Add initial functionality for SEP-10c and Passkeys:

SEP-10c Debugger:
- Allows the use a mocked or remote SEP-10c server
- Implements the SEP-10c flow:
  1. Get SEP-10c transaction
  1. Sign SEP-10c transaction
  1. Post SEP-10c signed transaction

Passkey Debugger:
- Creates Passkey
- Connects with existing passkey

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sdf-fe-template-vite",
+  "name": "sep-smart-wallet",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@simplewebauthn/browser": "^10.0.0",
     "@stellar/design-system": "^2.0.0-beta.16",
-    "@stellar/stellar-sdk": "^12.2.0",
+    "@stellar/stellar-sdk": "^12.3.0",
     "@tanstack/react-query": "^5.56.2",
+    "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "toml": "^3.0.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
