--- a/soroban/Cargo.toml
+++ b/soroban/Cargo.toml
@@ -1,11 +1,24 @@
 [workspace]
 resolver = "2"
-members = [
-  "contracts/*",
-]
+members = ["contracts/*"]
 
 [workspace.dependencies]
 soroban-sdk = "21.0.0"
+
+[workspace.dependencies.serde]
+version = "1"
+default-features = false
+
+[workspace.dependencies.serde-json-core]
+version = "0.5.1"
+default-features = false
+
+[workspace.dependencies.stellar-xdr]
+version = "21.2.0"
+default-features = false
+
+[workspace.dependencies.sha256]
+version = "1.5.0"
 
 [profile.release]
 opt-level = "z"
