--- a/soroban/Makefile
+++ b/soroban/Makefile
@@ -1,11 +1,19 @@
-export SOROBAN_RPC_URL=https://soroban-testnet.stellar.org:443
-export SOROBAN_NETWORK_PASSPHRASE=Test SDF Network ; September 2015
-export SOROBAN_ACCOUNT=default
+# SOROBAN envs that are sourced by stellar-cli automatically:
+export STELLAR_RPC_URL=https://soroban-testnet.stellar.org:443
+export STELLAR_NETWORK_PASSPHRASE=Test SDF Network ; September 2015
+export STELLAR_ACCOUNT=default
 
-export NATIVE_CONTRACT=CDLZFC3SYJYDZT7K67VZ75HPJVIEUVNIXF47ZG2FB2RMQQVU2HHGCYSC
+# Choose an asset to use:
+export ASSET=USDC:GDQOE23CFSUMSVQK4Y5JHPPYK73VYCNHZHA7ENKCV37P6SUEO6XQBKPP 		# Our USDC
+# export ASSET=USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5 	# CIRCLE USDC
+# export ASSET=native		 													# XLM
 
+# Factory and Wallet contracts
 export WEBAUTHN_FACTORY=CAJWHSAL56JEL64QKPAODVK3WDHC2DFXDR5MRLOTQDXTIVAFFS5O3ACO
 export WEBAUTHN_WASM=739eef7fae6d43b04a36f778dae6946436cff37712e328b46e8dabc9ea5917d9
+
+generate-default-account:
+	stellar keys generate default --global
 
 clean:
 	rm -rf out/
@@ -29,15 +37,12 @@ build:
 	@cd contracts/webauthn-factory && stellar contract build --package webauthn-factory --out-dir ../../out
 	stellar contract optimize --wasm ./out/webauthn_factory.wasm
 
+get-or-create-token-contract:
+	stellar contract asset deploy --asset $(ASSET) 2>/dev/null || stellar contract id asset --asset $(ASSET)
+
 deploy:
-	stellar contract asset deploy --asset native || stellar contract id asset --asset native
 	stellar contract deploy --wasm ./out/webauthn_factory.optimized.wasm
 	stellar contract install --wasm ./out/webauthn_wallet.optimized.wasm
 
 init:
 	stellar contract invoke --id $(WEBAUTHN_FACTORY) -- init --wasm_hash $(WEBAUTHN_WASM)
-
-bindings:
-	stellar contract bindings typescript --id $(NATIVE_CONTRACT) --network testnet --output-dir ./out/sac-sdk --overwrite
-	stellar contract bindings typescript --id $(WEBAUTHN_FACTORY) --network testnet --output-dir ./out/passkey-factory-sdk --overwrite
-	stellar contract bindings typescript --id $(WEBAUTHN_FACTORY) --wasm ./out/webauthn_wallet.optimized.wasm --network testnet --output-dir ./out/passkey-kit-sdk --overwrite
