Start inferring the ID of the passkey contract based on the deployer (factory) ID

--- a/soroban/Makefile
+++ b/soroban/Makefile
@@ -4,7 +4,7 @@ export STELLAR_NETWORK_PASSPHRASE=Test SDF Network ; September 2015
 export STELLAR_ACCOUNT=default
 
 # Choose an asset to use:
-export ASSET=USDC:GDQOE23CFSUMSVQK4Y5JHPPYK73VYCNHZHA7ENKCV37P6SUEO6XQBKPP 		# Our USDC
+export ASSET=USDC:GDQOE23CFSUMSVQK4Y5JHPPYK73VYCNHZHA7ENKCV37P6SUEO6XQBKPP 		# Our USD
 # export ASSET=USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5 	# CIRCLE USDC
 # export ASSET=native		 													# XLM
 
