--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ VITE_STELLAR_SOURCE_ACCOUNT_PRIVATE_KEY="SAARF2ZWAHZJMKA6LXIFVNIHUBEUTMKV5NWCCUZ
 VITE_STELLAR_SOURCE_ACCOUNT_PUBLIC_KEY="GAX7FKBADU7HQFB3EYLCYPFKIXHE7SJSBCX7CCGXVVWJ5OU3VTWOFEI5"
 
 VITE_PROJECT_ID="meridian-2024-smart-wallet"
-VITE_PROJECT_TITLE="Smart Wallet"
+VITE_PROJECT_TITLE="SEP Smart Wallet"
 VITE_PROJECT_DOMAIN="localhost"
 
 VITE_PASSKEY_NAME="passkey-meridian2024-localhost"
